src/CSS/App.css
/* ... */
@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.navbar {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

#light .navbar {
  background-color: var(--blue-black);
}

#dark .navbar {
  background-color: var(--blue-black);
}

.nav-links {
  flex: 1;
  text-align: right;
}

.nav-links .nav-item {
  color: var(--white);
  font-size: 1.5rem;
  font-weight: 500;
  letter-spacing: 0.1rem;
  list-style: none;
  padding: 0.8px 20px;
  text-decoration: none;
  transition: 0.6s;
}

#home-nav:hover {
  color: lightskyblue;
}

#about-nav:hover {
  color: plum;
}

#projects-nav:hover {
  color: peru;
}

#blog-nav:hover {
  color: mediumvioletred;
}

#contact-nav:hover {
  color: yellowgreen;
}

#login-nav:hover {
  color: tomato;
}

.hamburger-button {
  border: none;
  cursor: pointer;
  margin-right: 2rem;
}

.hamburger-icon {
  background-color: var(--blue-black);
  border: none;
  color: var(--white);
  height: 30px;
}

/* LIGHT/DARK TOGGLE */

.color-toggle {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 0 4rem;
}

.toggle-text {
  font-size: 1rem;
  font-weight: 600;
  letter-spacing: 0.1rem;
  color: var(--white);
  margin-right: 1rem;
}

/* HAMBURGER */

.hamburger-button {
  display: none;
}

/* HERO CONTAINER AND TEXT */

.hero__container {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0 auto;
  overflow: hidden;
  padding-top: 3rem;
  width: 100vw;
}

.hero__text {
  margin-left: 3rem;
  padding-top: 7rem;
  text-align: left;
  width: 30%;
  max-height: 40%;
}

.hello-text {
  font-size: 3rem;
  font-weight: 500;
  margin-bottom: 1.8rem;
}

.my-name-text {
  font-size: 5rem;
  font-weight: 700;
  margin-bottom: 1.8rem;
}

.my-title-text {
  font-size: 4.3rem;
  font-weight: 500;
  margin-bottom: 1.8rem;
}

#light .my-name-text,
#light .my-title-text,
#light .hello-text {
  color: var(--blue-black);
}

#dark .my-name-text,
.my-title-text,
.hello-text {
  color: var(--white);
}

.hero-image-container {
  width: 40%;
}

/* hero clouds */

.html-cloud,
.css-cloud,
.js-cloud,
.node-cloud,
.react-cloud,
.git-cloud {
  opacity: 0.7;
}

.html-cloud {
  width: 150px;
}

.css-cloud {
  width: 130px;
}

.git-cloud {
  width: 130px;
}

.js-cloud {
  width: 300px;
}

.node-cloud {
  width: 240px;
}

.react-cloud {
  width: 210px;
}

/* BUTTONS */

button {
  font-size: 1.3rem;
  font-weight: 500;
}

/* hero button on hero banner */

.hero-button {
  background-color: var(--dark-blue);
  border: none;
  border-radius: 6px;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  color: var(--white);
  cursor: pointer;
  letter-spacing: 0.1rem;
  margin-top: 2.7rem;
  padding: 1.2rem 3rem;
  transition: 0.6s;
}

#light .hero-button {
  background-color: var(--dark-blue);
}

#dark .hero-button {
  background-color: var(--blue-black);
}

.hero-button:hover {
  color: tomato;
}

.hero-button:hover .button-icon {
  color: tomato;
  animation: bounce 1s ease-in-out infinite;
}

@-webkit-keyframes bounce {
  to {
    -webkit-transform: scale(1.1);
  }
}
@-moz-keyframes bounce {
  to {
    -moz-transform: scale(1.3);
  }
}
@keyframes bounce {
  to {
    transform: scale(1.1);
  }
}

/* about section buttons */

.resume-button,
.med-blue-button,
.dark-blue-button {
  border: none;
  border-radius: 5px;
  cursor: pointer;
  color: var(--white);
  display: inline-block;
  font-size: 1.3rem;
  font-weight: 600;
  letter-spacing: 0.1rem;
  margin-right: 1.5rem;
  padding: 1.2rem 3.5rem;
  width: 128px;
  text-align: center;
  text-decoration: none;
  transition: 0.6s;
}

.button-icon {
  height: 18px;
  width: 18px;
  margin-right: 1.3rem;
  transition: 0.5s;
  vertical-align: bottom;
}

.resume-button {
  background-color: #1a78c8;
}

.resume-button:hover,
.resume-button:focus {
  box-shadow: inset 0 -3.8em 0 0 plum;
}

.resume-button:hover .button-icon,
.med-blue-button:hover .button-icon,
.dark-blue-button:hover .button-icon {
  animation: tilt 0.25s infinite;
}

.med-blue-button {
  background-color: var(--mid-blue-accent);
}

.med-blue-button:hover,
.med-blue-button:focus {
  box-shadow: inset 0 -3.8em 0 0 mediumvioletred;
}

#light .dark-blue-button {
  background-color: var(--dark-blue);
}

#dark .dark-blue-button {
  background-color: #040a60;
}

.dark-blue-button:hover,
.dark-blue-button:focus {
  box-shadow: inset 0 -3.8em 0 0 purple;
}

.button-icon {
  color: white;
  height: 20px;
}

/* contact section buttons */

#form .dark-blue-button {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 4rem;
  width: 180px;
}

#light .section-title {
  color: var(--mid-blue-accent);
}

#dark .section-title {
  color: var(--periwinkle);
}

/* ABOUT ME SECTION */

.about__section {
  margin: 0 auto;
  position: relative;
  width: 65%;
}

.about__container {
  display: flex;
  padding: 6rem 0;
}

.sm-section-header {
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
}

#light .sm-section-header {
  color: var(--gray-text);
}

#dark .sm-section-header {
  color: var(--white);
}

.profile__image {
  align-self: center;
  margin-right: 6rem;
}

.about-paragraph {
  margin-top: 1rem;
  margin-bottom: 5rem;
}

.button-banner {
  height: 40vh;
  width: 100%;
  overflow: hidden;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin: 0 auto;
}

/* SKILLS SECTION */

.skills-background {
  background-color: var(--mid-blue-accent);
  margin: 4rem 0 4rem;
  padding-bottom: 7rem;
  padding-top: 5rem;
}

.skill-icons-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin: 0 auto;
  overflow: hidden;
}
/* ... */

